feat: Adiciona funcionalidade de curtir reviews e atualiza DTOs
Introduz a capacidade de curtir/descurtir reviews, incluindo novos
endpoints e lógica de serviço.

Adiciona AtorDTO e CurtirReviewDTO, atualiza FilmeResponseDTO para
usar elenco e aprimora os DTOs e a entidade de Review com campos
relacionados a curtidas.

Também atualiza endpoints de favoritos, refina a configuração de CORS
e melhora a configuração do banco de dados para suporte a variáveis
de ambiente.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,18 +4,16 @@ server.port=8081
 jwt.token.secret=${JWT_SECRET:defaultSecretKey}
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/filmesdb
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
-# (Opcional, mas MUITO útil) Mostra o SQL gerado no console
 spring.jpa.show-sql=true
 
-# (Opcional) Formata o SQL exibido para ficar mais legível
 spring.jpa.properties.hibernate.format_sql=true
